<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius">
    <TableLayout
        android:id="@+id/TableLayout_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30000000"
        android:stretchColumns="1,2">
        <TableRow

            android:id="@+id/Fixed_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/date" />

            <TextView
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/max_temperature" />

            <TextView
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/min_temperature" />
        </TableRow>

        <TableRow android:id="@+id/change_data">

            <TextView
                android:paddingStart="4dp"
                android:textColor="#FFFFFF"
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="2021/05/16" />

            <TextView
                android:textColor="#FFFFFF"
                android:id="@+id/maxTableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="20.21°C" />

            <TextView
                android:textColor="#FFFFFF"
                android:id="@+id/minTableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="10.11°C" />
        </TableRow>
    </TableLayout>
</LinearLayout>